# fonttools

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
Doc/source/designspaceLib/: diagrams.puml  index.rst  python.rst  readme.rst  scripting.rst  xml.rst
Lib/fontTools/: config.py
Lib/fontTools/designspaceLib/: __init__.py  convert5to4.py  stat.py  statNames.py  types.py
Lib/fontTools/otlLib/: builder.py
Lib/fontTools/otlLib/optimize/: __init__.py  gpos.py
Lib/fontTools/ttLib/: __init__.py  ttFont.py
Lib/fontTools/varLib/: __init__.py  merger.py
Tests/: config_test.py
Tests/designspaceLib/: convert5to4_test.py  designspace_test.py  designspace_v5_test.py  statNames_test.py
Tests/designspaceLib/data/: test_v4_original.designspace  test_v5.designspace  test_v5_aktiv.designspace  test_v5_decovar.designspace  test_v5_original.designspace  test_v5_sourceserif.designspace
Tests/designspaceLib/data/convert5to4_out/: AktivGroteskVF_Italics_Wght.designspace  AktivGroteskVF_Italics_WghtWdth.designspace  AktivGroteskVF_Wght.designspace  AktivGroteskVF_WghtWdth.designspace  AktivGroteskVF_WghtWdthItal.designspace  SourceSerif4Variable-Italic.designspace  SourceSerif4Variable-Roman.designspace
